--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,16 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  country_code_picker: ^2.0.2
   cupertino_icons: ^1.0.2
+  dio: ^4.0.4
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.2.0
   google_fonts: ^2.2.0
   page_transition: ^2.0.4
   provider: ^6.0.2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_lints: ^1.0.0
